# CameraPush

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/david/camerapush/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/david/camerapush/: AutoFitTextureView.java  Camera2BasicFragment.java  CameraActivity.java  ImageUtil.java
app/src/main/java/com/david/camerapush/ffmpeg/: FFmpegHandler.java
app/src/main/jni/: ffmpeg-handler.c  ffmpeg-handler.h
app/src/main/res/layout/: fragment_camera2_basic.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/david/camerapush/: ExampleUnitTest.kt
